src/views/snapshots/git_local_review__views__review_create_view__tests__review_create_view_render_default.snap
---
source: src/views/review_create_view.rs
expression: render_app_to_terminal_backend(app)
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                ╭Create New Review─────────────────────────────────────────────────────────────────────────────╮                                "
"                                │Base Branch:                                                                                  │                                "
"                                │┌────────────────────────────────────────────────────────────────────────────────────────────┐│                                "
"                                ││                                                                                            ││                                "
"                                │└────────────────────────────────────────────────────────────────────────────────────────────┘│                                "
"                                │Target Branch:                                                                                │                                "
"                                │┌────────────────────────────────────────────────────────────────────────────────────────────┐│                                "
"                                ││                                                                                            ││                                "
"                                │└────────────────────────────────────────────────────────────────────────────────────────────┘│                                "
"                                │Press Tab to switch fields, Enter to create, Esc to cancel                                    │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                ╰──────────────────────────────────────────────────────────────────────────────────────────────╯                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
