src/views/snapshots/git_local_review__views__review_create_view__tests__review_create_view_render_with_branches.snap
---
source: src/views/review_create_view.rs
expression: render_app_to_terminal_backend(app)
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                ╭Create New Review - Select Branches───────────────────────────────────────────────────────────────────────────────────────────╮                "
"                │┌Base Branch──────────────────────────────────────────────────┐┌Target Branch────────────────────────────────────────────────┐│                "
"                ││> main                                                       ││  main                                                       ││                "
"                ││  develop                                                    ││  develop                                                    ││                "
"                ││  feature/new-feature                                        ││> feature/new-feature                                        ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                ││                                                             ││                                                             ││                "
"                │Type: Filter, Backspace: Edit, ↑↓/Ctrl+j/k: Navigate, Tab: Switch, Enter: Create─────────────────────────────────────────────┘│                "
"                ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
