src/views/snapshots/git_local_review__views__review_create_view__tests__review_create_view_render_with_title.snap
---
source: src/views/review_create_view.rs
expression: render_app_to_terminal_backend(app)
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                ╭Create New Review─────────────────────────────────────────────────────────────────────────────╮                                "
"                                │Base Branch:                                                                                  │                                "
"                                │┌────────────────────────────────────────────────────────────────────────────────────────────┐│                                "
"                                ││main                                                                                        ││                                "
"                                │└────────────────────────────────────────────────────────────────────────────────────────────┘│                                "
"                                │Target Branch:                                                                                │                                "
"                                │┌────────────────────────────────────────────────────────────────────────────────────────────┐│                                "
"                                ││feature/new-feature                                                                         ││                                "
"                                │└────────────────────────────────────────────────────────────────────────────────────────────┘│                                "
"                                │Press Tab to switch fields, Enter to create, Esc to cancel                                    │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                ╰──────────────────────────────────────────────────────────────────────────────────────────────╯                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
